--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <p><strong>Details:</strong> Completed a comprehensive externship focusing on SEO and content marketing strategies.</p>
 
         <div class="certificates">
-            <img src="path/to/certificate1.jpg" alt="Certificate 1">
+            <img src="path/to/certificate.jpg" alt="Certificate 1">
         </div>
     </section>
 
